--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="resources/favicons/ms-icon-144x144.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <meta name="theme-color" content="#ffffff">
   <link
     href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
@@ -30,7 +30,7 @@
 
 <body>
   <!--NAVBAR-->
-  <div class="header" id="header">
+  <div class="header w-100" id="header">
     <div class="overlay"></div>
     <div class="wrapper">
       <!-- Sidebar  -->
